syntax = "proto3";

import "buf/validate/validate.proto";
import "protobuf/options/option.proto";
import "task/v1/task.proto";
import "google/protobuf/timestamp.proto";

package conductor.api.task.v1;

option go_package = "github.com/ryanreadbooks/whimer/conductor/api/taskservice/v1;taskservice";

service TaskService {
  // 注册任务
  rpc RegisterTask(RegisterTaskRequest) returns (RegisterTaskResponse);

  // 获取任务
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);

  // 终止任务
  rpc AbortTask(AbortTaskRequest) returns (AbortTaskResponse);
}

message RegisterTaskRequest {
  // 任务类型
  string task_type = 1 [(buf.validate.field).string.min_len = 1];

  // 所属命名空间
  string namespace = 2 [(buf.validate.field).string.min_len = 1];

  // 输入参数
  bytes input_args = 3;

  // 回调url
  string callback_url = 4;

  // 最大重试次数 -1表示无限重试直到超时, 0表示不重试
  int64 max_retry_cnt = 5;

  // 任务过期时间
  google.protobuf.Timestamp expire_time = 6;
}

message RegisterTaskResponse {
  string task_id = 1;
}

message GetTaskRequest {
  string task_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetTaskResponse {
  Task task = 1;
}

message AbortTaskRequest {
  string task_id = 1 [(buf.validate.field).string.min_len = 1];
}

message AbortTaskResponse {
}
